plugins {
  id 'java'
  id 'maven-publish'
  id 'signing'
}

group 'org.legendofdragoon'
version '0.3.0'

ext.isReleaseVersion = !version.endsWith("SNAPSHOT")

sourceCompatibility = targetCompatibility = 1.21

repositories {
  mavenCentral()
}

compileJava.options.encoding = 'UTF-8'

dependencies {
  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
  implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
  implementation group: 'org.fusesource.jansi', name: 'jansi', version: '2.3.2'
  implementation group: 'com.opencsv', name: 'opencsv', version: '5.9'
  implementation group: 'commons-cli', name: 'commons-cli', version: '1.6.0'
  implementation group: 'io.github.java-diff-utils', name: 'java-diff-utils', version: '4.12'
  implementation 'org.jetbrains:annotations:20.1.0'
}

tasks.register('sourceJar', Jar) {
  from sourceSets.main.allJava
}

tasks.withType(Sign).configureEach {
  onlyIf { isReleaseVersion }
}

java {
  withJavadocJar()
  withSourcesJar()
}

artifacts {
  archives javadocJar, sourcesJar
}

publishing {
  repositories {
    maven {
      final def releaseRepo = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
      final def snapshotRepo = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
      url = isReleaseVersion ? releaseRepo : snapshotRepo
      credentials {
        username = project.hasProperty('ossrhUsername') ? ossrhUsername : "Unknown user"
        password = project.hasProperty('ossrhPassword') ? ossrhPassword : "Unknown password"
      }
    }
  }

  publications {
    mavenJava(MavenPublication) {
      artifactId = 'script-recompiler'
      from components.java
      pom {
        name = 'Severed Chains Script Decompiler and Recompiler'
        description = 'Tools for working with Legend of Dragoon scripts'
        url = 'https://github.com/Legend-of-Dragoon-Modding/Script-Recompiler'
        packaging = 'jar'
        licenses {
          license {
            name = 'GNU Affero General Public License, Version 3.0'
            url = 'https://www.gnu.org/licenses/agpl-3.0.en.html'
          }
        }
        developers {
          developer {
            id = 'Monoxide'
            name = 'Corey Frenette'
            email = 'lordmonoxide@gmail.com'
          }
        }
        scm {
          connection = 'scm:git:git://github.com/Legend-of-Dragoon-Modding/Script-Recompiler.git'
          developerConnection = 'scm:git:ssh://github.com/Legend-of-Dragoon-Modding/Script-Recompiler.git'
          url = 'https://github.com/Legend-of-Dragoon-Modding/Script-Recompiler/'
        }
      }
    }
  }
}

signing {
  sign publishing.publications.mavenJava
}

javadoc {
  if(JavaVersion.current().isJava9Compatible()) {
    options.addBooleanOption('html5', true)
  }
}
